--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>You Shall Not Pass</p>
   </div>
   <div>
-  <script src="map.js"></script>
+  <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
   <audio src="/audio/Spell_04.wav" id="spell"></audio>
   </div>
