--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 </head>
 <body>
   <div id="imageContainer">
-  <img src="/images/map.png" id="project" alt="project">
-  <img src="/images/map1.png" id="map1" alt="map1">
-  <img src="/images/BombExploding.png" id="bomb" alt="bomb">
+  <img src="/map.png" id="project" alt="project">
+  <img src="/map1.png" id="map1" alt="map1">
+  <img src="/BombExploding.png" id="bomb" alt="bomb">
   </div>
   <input type="checkbox" id="hoverCheckbox" />
   <div id="photo">
-      <img src="/images/Gandalf.jpeg" alt="Your Photo">
+      <img src="/Gandalf.jpeg" alt="Your Photo">
       <label for="hoverCheckbox"></label>
       <p>You Shall Not Pass</p>
   </div>
   <div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
-  <audio src="/audio/Spell_04.wav" id="spell"></audio>
   </div>
 </body>
 </html>
