--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <input type="checkbox" id="hoverCheckbox" />
   <div id="photo">
-      <img src="/1.jpeg" alt="Your Photo">
+      <img src="/1.jpeg" id='/1.jpeg' alt="Your Photo">
       <label for="hoverCheckbox"></label>
       <p>You Shall Not Pass</p>
   </div>
