--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="imageContainer">
-  <img src="1.jpeg" id="project" alt="project">
+  <img src="1.jpeg" id="map" alt="project">
   <img src="map.png" id="map1" alt="map1">
   <img src="BombExploding.png" id="bomb" alt="bomb">
   </div>
