--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div id="imageContainer">
-  <img src="/images/map.png" id="project" alt="project">
+  <img src="images/map.png" id="project" alt="project">
   <img src="images/map1.png" id="map1" alt="map1">
-  <img src="/images/BombExploding.png" id="bomb" alt="bomb">
+  <img src="images/BombExploding.png" id="bomb" alt="bomb">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
