--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <img src="images/map.png" id="project" alt="project">
   <img src="images/map1.png" id="map1" alt="map1">
   <img src="images/BombExploding.png" id="bomb" alt="bomb">
+  <img src="images/player.png" id="player" alt="player">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
