--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <img src="images/map1.png" id="map1" alt="map1">
   <img src="images/BombExploding.png" id="bomb" alt="bomb">
   <img src="images/player.png" id="player" alt="player">
+  <img src="/images/towerBg.png" id="tower" alt="tower">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
