--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <img src="images/BombExploding.png" id="bomb" alt="bomb">
   <img src="images/player.png" id="player" alt="player">
   <img src="images/bgPlus.png" id="bgTwo" alt="bg">
+  <img src="images/playerFrame.png" id="playerFrame" alt="playerFrame">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
