--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="imageContainer">
+  <img src="images/coin_copper.png" id="coin" alt="coin">
   <img src="images/map.png" id="project" alt="project">
   <img src="images/BombExploding.png" id="bomb" alt="bomb">
   <img src="images/player.png" id="player" alt="player">
