--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game v1</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/images/G2.png" >
+    <link rel="icon" type="image/png" href="images/G2.png" >
 </head>
 <body>
   <div id="imageContainer">
