--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <img src="images/player.png" id="player" alt="player">
   <img src="images/bgPlus.png" id="bgTwo" alt="bg">
   <img src="images/playerFrame.png" id="playerFrame" alt="playerFrame">
+  <img src="images/lightnign.png" id="lightning" alt="lightning">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
