--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <img src="images/bgPlus.png" id="bgTwo" alt="bg">
   <img src="images/playerFrame.png" id="playerFrame" alt="playerFrame">
   <img src="images/lightnign.png" id="lightning" alt="lightning">
+  <img src="images/M484GoodFruits.png" id="fruit" alt="fruit">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
