--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <img src="images/playerFrame.png" id="playerFrame" alt="playerFrame">
   <img src="images/lightnign.png" id="lightning" alt="lightning">
   <img src="images/M484GoodFruits.png" id="fruit" alt="fruit">
+  <img src="images/numberSheet2.png" id="numberSheet" alt="numberSheet">
   </div>
   <script src="main.js"></script>
   <canvas id="myCanvas"></canvas>
