--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="images/BombExploding.png" id="bomb" alt="bomb">
   <img src="images/player.png" id="player" alt="player">
   <img src="images/bgPlus.png" id="bgTwo" alt="bg">
-  <img src="images/playerFrame.png" id="playerFrame" alt="playerFrame">
+  <img src="images/playerFrame0.png" id="playerFrame" alt="playerFrame">
   <img src="images/lightnign.png" id="lightning" alt="lightning">
   <img src="images/M484GoodFruits.png" id="fruit" alt="fruit">
   <img src="images/numberSheet2.png" id="numberSheet" alt="numberSheet">
