changed audio to mp3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" type="image/png" href="images/G2.png" >
 </head>
 <body>
+  <div id="audio">
+    <audio src="/audio/Spell_02.wav" id="audioSpell"></audio>
+    <audio src="/audio/stop_for_a_moment.mp3" id="audioMusic"></audio>
+    <audio src="/audio/completetask_0.mp3" id="audioGold"></audio>
+  </div>
   <div id="imageContainer">
   <img src="images/coin_copper.png" id="coin" alt="coin">
   <img src="images/map.png" id="project" alt="project">
